k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: refacil-wallet
  labels:
    name: refacil-wallet
    environment: production
