k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: refacil-wallet
  namespace: refacil-wallet
  labels:
    app: refacil-wallet
spec:
  type: ClusterIP
  selector:
    app: refacil-wallet
  ports:
  - name: http
    port: 80
    targetPort: 3000
    protocol: TCP
